--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "materiales_cbvcde",
+  "name": "vexpress",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,12 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "moment": "^2.24.0",
     "mongodb-stitch-react-native-sdk": "^4.8.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-confetti": "^0.1.0",
-    "react-native-swipeout": "^2.3.6"
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^2.7.0",
+    "react-native-swipeout": "^2.3.6",
+    "react-navigation": "^4.3.8",
+    "react-navigation-stack": "^2.3.13"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
