--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.10",
     "moment": "^2.24.0",
     "mongodb-stitch-react-native-sdk": "^4.8.0",
@@ -17,11 +18,14 @@
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
     "react-native-confetti": "^0.1.0",
+    "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
+    "react-native-snackbar": "^2.2.0",
     "react-native-swipeout": "^2.3.6",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.8",
     "react-navigation-stack": "^2.3.13"
   },
