--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,8 @@ target 'materiales_cbvcde' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNGoogleSignin', :path => '../node_modules/@react-native-community/google-signin'
+
   target 'materiales_cbvcdeTests' do
     inherit! :complete
     # Pods for testing
