Se crean pantallas parciales de login-singup y resetpassword con su correspondientes routes y una configuracion de firebase(por el momento con un warning por parte de firebase)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rematch/loading": "^1.2.1",
     "@rematch/persist": "^1.1.6",
     "axios": "^0.19.2",
+    "firebase": "^7.14.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.25.3",
     "native-base": "^2.13.12",
