--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,11 +129,12 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.reactnativestarterkit"
+        applicationId "com.latitud.rnfsk"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -194,6 +195,15 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation 'com.android.support:multidex:1.0.3'
+
+     // Firebase bom setup
+    // implementation "com.google.firebase:firebase-core:16.0.8"
+
+    // implementation "com.google.android.gms:play-services-base:16.1.0"
+    // implementation "com.google.firebase:firebase-core:16.0.8"
+    implementation "com.google.firebase:firebase-analytics:17.2.2"
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
@@ -222,4 +232,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
+apply plugin: 'com.google.gms.google-services'
+
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
