--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -201,7 +201,8 @@ dependencies {
     // implementation "com.google.firebase:firebase-core:16.0.8"
 
     // implementation "com.google.android.gms:play-services-base:16.1.0"
-    // implementation "com.google.firebase:firebase-core:16.0.8"
+    implementation "com.google.firebase:firebase-core:16.0.8"
+
     implementation "com.google.firebase:firebase-analytics:17.2.2"
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
