--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.10.1",
+    "@react-native-firebase/app": "^7.0.1",
+    "@react-native-firebase/auth": "^7.0.2",
+    "@react-native-firebase/database": "^7.0.1",
     "@rematch/core": "^1.4.0",
     "@rematch/loading": "^1.2.1",
     "@rematch/persist": "^1.1.6",
